test/spec_vectors/i32/fail/module_37.wat
(module (func $type-binary-1st-operand-empty-in-select (select (i32.add) (i32.const 1) (i32.const 2)) (drop)))